# covsrv

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  alembic.ini  atlas.hcl  compose.yml  config.example.toml  covsrv.py  main.py  pyproject.toml
.github/workflows/: post-pr.yml  pre-pr.yml  pre-pr.yml.nope  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_add_provider_name.py  0003_backfill_provider_name.py
covsrv/: config.py  db.py  html.py  models.py  sql.py
covsrv/auth/: __init__.py  cache.py  config.py  dependencies.py  gitea.py  github.py  provider.py  routes.py  session.py
covsrv/badges/: __init__.py  badges.py
covsrv/templates/: _navbar.html  access_denied.html  dashboard.html  framed_raw.html
migrations/: 20260218000000_add_provider_url.sql
tests/: conftest.py  test_auth.py  test_badges.py  test_config.py  test_db.py  test_main.py  test_sql.py
