[project]
name = "covsrv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "coverage>=7.13.4",
    "fastapi>=0.129.0",
    "pre-commit>=4.5.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
