[project]
name = "covsrv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.18.4",
    "anyio>=4.8.0",
    "argon2-cffi>=25.1.0",
    "coverage>=7.13.4",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
